Update media queries to fix alignment issues on all devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* Global style */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -17,6 +19,8 @@ body {
     min-height: 100%;
 }
 
+/* Heading */
+
 h1 {
     text-align: center;
     margin-top: 10px 
@@ -25,6 +29,8 @@ h1 {
 main {
     height: 100%;
 }
+
+/* Quiz area */
 
 .quiz-container {
     display: flex;
@@ -44,26 +50,26 @@ main {
     justify-content: center;
     padding: 10px;
     margin-top: 85%;
-    width: 45%;
+    width: 85%;
 }
 
 .quiz-header {
+    align-items: center;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     text-align: center;
     width: 100%;
 }
 
 .question-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
     border: none;
     border-radius: 0 0 5px 5px;
-    padding: 10px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
     margin-top: 5px;
+    padding: 10px;
 }
 
 .question-box h2 {
@@ -71,20 +77,23 @@ main {
     text-align: center;
 }
 
+/* Buttons */
+
 .quiz-options {
     padding: 10px 0;
+    width: 100%;
 }
 
-.Option1,
-.Option2, 
-.Option3, 
-.Option4 {
+.option1,
+.option2, 
+.option3, 
+.option4 {
     background-color: #cfdbc5;
     border-radius: 5px;
     margin: 0 0 10px;
     padding: 10px;
     text-align: center;
-    width: 300px;
+    width: 100%;
 }
 
 .btn {
@@ -97,47 +106,95 @@ main {
 }
 
 
-/* start of media queries section  */
-/* portrait */
+/* Start of media queries section  */
 
-/* screen sizes equal to or larger than 360px wide */
+/* Portrait */
+/* Screen sizes equal to or larger than 280px wide */
+@media screen and (min-width: 280px) 
+and (orientation: portrait) {
+    
+    #quiz-box {
+        margin-top: 20%;
+    }
+}
+
+/* Screen sizes equal to or larger than 360px wide */
 @media screen and (min-width: 360px) 
 and (orientation: portrait) {
     
     #quiz-box {
-        width: 90%;
+        margin-top: 50%;
     }
 }
 
-/* screen sizes equal to or larger than 412px wide */
+/* Screen sizes equal to or larger than 375px wide */
+@media screen and (min-width: 375px) 
+and (orientation: portrait) {
+    
+    #quiz-box {
+        margin-top: 30%;
+    }
+}
+
+/* Screen sizes equal to or larger than 390px wide */
+@media screen and (min-width: 390px) 
+and (orientation: portrait) {
+    
+    #quiz-box {
+        margin-top: 75%;
+    }
+}
+
+/* Screen sizes equal to or larger than 412px wide */
 @media screen and (min-width: 412px) 
 and (orientation: portrait) {
     
     #quiz-box {
-        width: 80%;
+        margin-top: 85%;
     }
 }
 
-/* screen sizes equal to or larger than 768px wide */
+/* Screen sizes equal to or larger than 540px wide */
+@media screen and (min-width: 540px) 
+and (orientation: portrait) {
+    
+    #quiz-box {
+        margin-top: 35%;
+        width: 85%;
+    }
+}
+
+
+/* Tablets */
+/* Screen sizes equal to or larger than 768px wide */
 @media screen and (min-width: 768px) 
 and (orientation: portrait) {
     
     #quiz-box {
-        margin-top: 55%;
+        margin: 50% 0 0 20%;
         width: 43%;
     }
 }
 
-/* landscape */
+/* Screen sizes equal to or larger than 912px wide */
+@media screen and (min-width: 912px) 
+and (orientation: portrait) {
+    
+    #quiz-box {
+        margin: 50% 0 0 0;
+    }
+}
 
-/* screen sizes equal to or larger than 560px wide */
-@media screen and (min-width: 560px) 
+/* Landscape */
+
+/* Screen sizes equal to or larger than 560px wide */
+@media screen and (min-width: 540px) 
 and (orientation: landscape) {
     
     #quiz-box {
         border: 2px solid #cfdbc5;
         margin: 220px 0 0 100px;
-        width: 18%;
+        width: 43%;
     }
 
     .question-box h2 {
@@ -151,27 +208,62 @@ and (orientation: landscape) {
 
 }
 
-/* screen sizes equal to or larger than 1024px wide */
+/* Screen sizes equal to or larger than 1024px wide */
 @media screen and (min-width: 1024px) 
 and (orientation: landscape) {
     
     #quiz-box {
         border: 2px solid #cfdbc5;
-        margin: 220px 0 100px 180px;
-        width: 32%;
+        margin: 12% 0 0 30%;
     }
 
 }
 
-/* screen sizes equal to or larger than 1280px wide */
+/* Screen sizes equal to or larger than 1280px wide */
 @media screen and (min-width: 1280px) 
 and (orientation: landscape) {
     
     #quiz-box {
         border: 2px solid #cfdbc5;
-        margin: 305px 0 100px 100px;
-        width: 25%;
-
+        margin: 23% 0 0 30%;
     }
 
+}
+
+/* Screen sizes equal to or larger than 1440px wide */
+@media screen and (min-width: 1360px) 
+and (orientation: landscape) {
+    
+    #quiz-box {
+        border: 2px solid #cfdbc5;
+        margin: 25% 0 0 15%;
+        width: 25%;
+    }
+
+}
+
+/* Extra large Screen sizes equal to or larger than 2560px wide */
+@media screen and (min-width: 2560px) 
+and (orientation: landscape) {
+    
+    #quiz-box {
+        border: 2px solid #cfdbc5;
+        margin: 25% 0 10% 15%;
+        width: 30%;
+    }
+
+    .quiz-header {
+        font-size: 1.8rem;
+    }
+
+    .question-box {
+        font-size: 2rem;
+        width: 100%;
+    }
+
+    .btn {
+        font-size: 2.5rem;
+        width: 35%; 
+    }
+    
 }
